[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Rafal Stapinski <stapinskirafal@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "*"
tortoise-orm = {git = "https://github.com/rafalstapinski/tortoise-orm.git", branch = "current"}
uvicorn = "^0.15.0"
uvloop = "^0.16.0"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
pylint = "*"
mypy = "*"
rope = "*"
isort = {extras = ["pipfile_deprecated_finder"],version = "*"}

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
